[package]
name = "dipha-rs"
version = "0.1.0"
authors = ["Robert Cardona <robertcardona@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-reader = "0.1.3"
num-traits = "0.2"
num-derive = "0.2"
image = "0.23.10"
